[package]
name = "rusty-eventide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-0_8"] }
rand = "0.8.5"
thiserror = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[features]
all_tests = [ "integration_tests" ]
integration_tests = []